--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "5-capstone---todo-list",
+  "name": "5-capstone-book-note-web-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
